# clipstream

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  batch_process.py  main.py  pyproject.toml
.github/workflows/: architecture.yml
.streamlit/: config.toml
docs/: architecture.drawio  architecture.md  architecture.mermaid
src/: .arch-trigger.js
yt_automation/: __init__.py  auth.py  editor.py  storage.py  youtube_ops.py
