[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipstream"
version = "1.0.0"
description = "Automate adding intro videos to YouTube content"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BlueFalconInk LLC"}
]
keywords = ["youtube", "video", "automation", "intro", "moviepy"]
dependencies = [
    "moviepy",
    "yt-dlp",
    "google-api-python-client",
    "google-auth-oauthlib",
    "python-dotenv",
    "streamlit"
]